_generated-doc/3.15/config/quarkus-hibernate-orm_quarkus.hibernate-orm.adoc
:summaryTableId: quarkus-hibernate-orm_quarkus-hibernate-orm
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[.header-title]##Configuration property##
h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm_quarkus-hibernate-orm-enabled]] [.property-path]##link:#quarkus-hibernate-orm_quarkus-hibernate-orm-enabled[`quarkus.hibernate-orm.enabled`]##

[.description]
--
Whether Hibernate ORM is enabled *during the build*.

If Hibernate ORM is disabled during the build, all processing related to Hibernate ORM will be skipped,
but it will not be possible to activate Hibernate ORM at runtime:
`quarkus.hibernate-orm.active` will default to `false` and setting it to `true` will lead to an error.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`true`

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm_quarkus-hibernate-orm-persistence-xml-ignore]] [.property-path]##link:#quarkus-hibernate-orm_quarkus-hibernate-orm-persistence-xml-ignore[`quarkus.hibernate-orm.persistence-xml.ignore`]##

[.description]
--
If `true`, Quarkus will ignore any `persistence.xml` file in the classpath and rely exclusively on the Quarkus configuration.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_PERSISTENCE_XML_IGNORE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_PERSISTENCE_XML_IGNORE+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm_quarkus-hibernate-orm-statistics]] [.property-path]##link:#quarkus-hibernate-orm_quarkus-hibernate-orm-statistics[`quarkus.hibernate-orm.statistics`]##

[.description]
--
Whether statistics collection is enabled. If 'metrics.enabled' is true, then the default here is considered true, otherwise the default is false.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_STATISTICS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_STATISTICS+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm_quarkus-hibernate-orm-log-session-metrics]] [.property-path]##link:#quarkus-hibernate-orm_quarkus-hibernate-orm-log-session-metrics[`quarkus.hibernate-orm.log-session-metrics`]##

[.description]
--
Whether session metrics should be appended into the server log for each Hibernate session. This only has effect if statistics are enabled (`quarkus.hibernate-orm.statistics`). The default is false (which means both `statistics` and `log-session-metrics` need to be enabled for the session metrics to appear in the log).


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_LOG_SESSION_METRICS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_LOG_SESSION_METRICS+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm_quarkus-hibernate-orm-metrics-enabled]] [.property-path]##link:#quarkus-hibernate-orm_quarkus-hibernate-orm-metrics-enabled[`quarkus.hibernate-orm.metrics.enabled`]##

[.description]
--
Whether metrics are published if a metrics extension is enabled.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_METRICS_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_METRICS_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm_quarkus-hibernate-orm-datasource]] [.property-path]##link:#quarkus-hibernate-orm_quarkus-hibernate-orm-datasource[`quarkus.hibernate-orm.datasource`]##

`quarkus.hibernate-orm."persistence-unit-name".datasource`

[.description]
--
The name of the datasource which this persistence unit uses.

If undefined, it will use the default datasource.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_DATASOURCE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_DATASOURCE+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm_quarkus-hibernate-orm-packages]] [.property-path]##link:#quarkus-hibernate-orm_quarkus-hibernate-orm-packages[`quarkus.hibernate-orm.packages`]##

`quarkus.hibernate-orm."persistence-unit-name".packages`

[.description]
--
The packages in which the entities affected to this persistence unit are located.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_PACKAGES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_PACKAGES+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm_quarkus-hibernate-orm-sql-load-script]] [.property-path]##link:#quarkus-hibernate-orm_quarkus-hibernate-orm-sql-load-script[`quarkus.hibernate-orm.sql-load-script`]##

`quarkus.hibernate-orm."persistence-unit-name".sql-load-script`

[.description]
--
Paths to files containing the SQL statements to execute when Hibernate ORM starts.

The files are retrieved from the classpath resources,
so they must be located in the resources directory (e.g. `src/main/resources`).

The default value for this setting differs depending on the Quarkus launch mode:

* In dev and test modes, it defaults to `import.sql`.
  Simply add an `import.sql` file in the root of your resources directory
  and it will be picked up without having to set this property.
  Pass `no-file` to force Hibernate ORM to ignore the SQL import file.
* In production mode, it defaults to `no-file`.
  It means Hibernate ORM won't try to execute any SQL import file by default.
  Pass an explicit value to force Hibernate ORM to execute the SQL import file.

If you need different SQL statements between dev mode, test (`@QuarkusTest`) and in production, use Quarkus
https://quarkus.io/guides/config#configuration-profiles[configuration profiles facility].

[source,property]
.application.properties
----
%dev.quarkus.hibernate-orm.sql-load-script = import-dev.sql
%test.quarkus.hibernate-orm.sql-load-script = import-test.sql
%prod.quarkus.hibernate-orm.sql-load-script = no-file
----

[NOTE]
====
Quarkus supports `.sql` file with SQL statements or comments spread over multiple lines.
Each SQL statement must be terminated by a semicolon.
====


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_SQL_LOAD_SCRIPT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_SQL_LOAD_SCRIPT+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|`import.sql in dev and test modes ; no-file otherwise`

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm_quarkus-hibernate-orm-physical-naming-strategy]] [.property-path]##link:#quarkus-hibernate-orm_quarkus-hibernate-orm-physical-naming-strategy[`quarkus.hibernate-orm.physical-naming-strategy`]##

`quarkus.hibernate-orm."persistence-unit-name".physical-naming-strategy`

[.description]
--
Pluggable strategy contract for applying physical naming rules for database object names. Class name of the Hibernate PhysicalNamingStrategy implementation


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_PHYSICAL_NAMING_STRATEGY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_PHYSICAL_NAMING_STRATEGY+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm_quarkus-hibernate-orm-implicit-naming-strategy]] [.property-path]##link:#quarkus-hibernate-orm_quarkus-hibernate-orm-implicit-naming-strategy[`quarkus.hibernate-orm.implicit-naming-strategy`]##

`quarkus.hibernate-orm."persistence-unit-name".implicit-naming-strategy`

[.description]
--
Pluggable strategy for applying implicit naming rules when an explicit name is not given. Class name of the Hibernate ImplicitNamingStrategy implementation


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_IMPLICIT_NAMING_STRATEGY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_IMPLICIT_NAMING_STRATEGY+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm_quarkus-hibernate-orm-metadata-builder-contributor]] [.property-path]##link:#quarkus-hibernate-orm_quarkus-hibernate-orm-metadata-builder-contributor[`quarkus.hibernate-orm.metadata-builder-contributor`]##

`quarkus.hibernate-orm."persistence-unit-name".metadata-builder-contributor`

[.description]
--
Class name of a custom
https://docs.jboss.org/hibernate/stable/orm/javadocs/org/hibernate/boot/spi/MetadataBuilderContributor.html[`org.hibernate.boot.spi.MetadataBuilderContributor`]
implementation.

[NOTE]
====
Not all customization options exposed by
https://docs.jboss.org/hibernate/stable/orm/javadocs/org/hibernate/boot/MetadataBuilder.html[`org.hibernate.boot.MetadataBuilder`]
will work correctly. Stay clear of options related to classpath scanning in particular.

This setting is exposed mainly to allow registration of types, converters and SQL functions.
====


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_METADATA_BUILDER_CONTRIBUTOR+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_METADATA_BUILDER_CONTRIBUTOR+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm_quarkus-hibernate-orm-mapping-files]] [.property-path]##link:#quarkus-hibernate-orm_quarkus-hibernate-orm-mapping-files[`quarkus.hibernate-orm.mapping-files`]##

`quarkus.hibernate-orm."persistence-unit-name".mapping-files`

[.description]
--
XML files to configure the entity mapping, e.g. `META-INF/my-orm.xml`.

Defaults to `META-INF/orm.xml` if it exists. Pass `no-file` to force Hibernate ORM to ignore `META-INF/orm.xml`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_MAPPING_FILES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_MAPPING_FILES+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|`META-INF/orm.xml if it exists; no-file otherwise`

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm_quarkus-hibernate-orm-quote-identifiers-strategy]] [.property-path]##link:#quarkus-hibernate-orm_quarkus-hibernate-orm-quote-identifiers-strategy[`quarkus.hibernate-orm.quote-identifiers.strategy`]##

`quarkus.hibernate-orm."persistence-unit-name".quote-identifiers.strategy`

[.description]
--
Identifiers can be quoted using one of the available strategies.

Set to `none` by default, meaning no identifiers will be quoted. If set to `all`, all identifiers and column definitions will be quoted. Additionally, setting it to `all-except-column-definitions` will skip the column definitions, which can usually be required when they exist, or else use the option `only-keywords` to quote only identifiers deemed SQL keywords by the Hibernate ORM dialect.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_QUOTE_IDENTIFIERS_STRATEGY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_QUOTE_IDENTIFIERS_STRATEGY+++`
endif::add-copy-button-to-env-var[]
--
a|`none`, `all`, `all-except-column-definitions`, `only-keywords`
|`none`

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm_quarkus-hibernate-orm-second-level-caching-enabled]] [.property-path]##link:#quarkus-hibernate-orm_quarkus-hibernate-orm-second-level-caching-enabled[`quarkus.hibernate-orm.second-level-caching-enabled`]##

`quarkus.hibernate-orm."persistence-unit-name".second-level-caching-enabled`

[.description]
--
The default in Quarkus is for 2nd level caching to be enabled, and a good implementation is already integrated for you.

Just cherry-pick which entities should be using the cache.

Set this to false to disable all 2nd level caches.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_SECOND_LEVEL_CACHING_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_SECOND_LEVEL_CACHING_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`true`

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm_quarkus-hibernate-orm-validation-enabled]] [.property-path]##link:#quarkus-hibernate-orm_quarkus-hibernate-orm-validation-enabled[`quarkus.hibernate-orm.validation.enabled`]##

`quarkus.hibernate-orm."persistence-unit-name".validation.enabled`

[.description]
--
Enables the Bean Validation integration.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_VALIDATION_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_VALIDATION_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`true`

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm_quarkus-hibernate-orm-multitenant]] [.property-path]##link:#quarkus-hibernate-orm_quarkus-hibernate-orm-multitenant[`quarkus.hibernate-orm.multitenant`]##

`quarkus.hibernate-orm."persistence-unit-name".multitenant`

[.description]
--
Defines the method for multi-tenancy (DATABASE, NONE, SCHEMA). The complete list of allowed values is available in the
https://javadoc.io/doc/org.hibernate/hibernate-core/5.6.10.Final/org/hibernate/MultiTenancyStrategy.html[Hibernate ORM
JavaDoc].
The type DISCRIMINATOR is currently not supported. The default value is NONE (no multi-tenancy).


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_MULTITENANT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_MULTITENANT+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm_quarkus-hibernate-orm-validate-in-dev-mode]] [.property-path]##link:#quarkus-hibernate-orm_quarkus-hibernate-orm-validate-in-dev-mode[`quarkus.hibernate-orm.validate-in-dev-mode`]##

`quarkus.hibernate-orm."persistence-unit-name".validate-in-dev-mode`

[.description]
--
If hibernate is not auto generating the schema, and Quarkus is running in development mode then Quarkus will attempt to validate the database after startup and print a log message if there are any problems.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_VALIDATE_IN_DEV_MODE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_VALIDATE_IN_DEV_MODE+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`true`

a| [[quarkus-hibernate-orm_quarkus-hibernate-orm-active]] [.property-path]##link:#quarkus-hibernate-orm_quarkus-hibernate-orm-active[`quarkus.hibernate-orm.active`]##

`quarkus.hibernate-orm."persistence-unit-name".active`

[.description]
--
Whether this persistence unit should be active at runtime.

See xref:hibernate-orm.adoc#persistence-unit-active[this section of the documentation].

If the persistence unit is not active, it won't start with the application,
and accessing the corresponding EntityManagerFactory/EntityManager or SessionFactory/Session
will not be possible.

Note that if Hibernate ORM is disabled (i.e. `quarkus.hibernate-orm.enabled` is set to `false`),
all persistence units are deactivated, and setting this property to `true` will fail.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_ACTIVE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_ACTIVE+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`'true' if Hibernate ORM is enabled; 'false' otherwise`

a| [[quarkus-hibernate-orm_quarkus-hibernate-orm-unsupported-properties-full-property-key]] [.property-path]##link:#quarkus-hibernate-orm_quarkus-hibernate-orm-unsupported-properties-full-property-key[`quarkus.hibernate-orm.unsupported-properties."full-property-key"`]##

`quarkus.hibernate-orm."persistence-unit-name".unsupported-properties."full-property-key"`

[.description]
--
Properties that should be passed on directly to Hibernate ORM.
Use the full configuration property key here,
for instance `quarkus.hibernate-orm.unsupported-properties."hibernate.order_inserts" = true`.

[WARNING]
====
Properties set here are completely unsupported:
as Quarkus doesn't generally know about these properties and their purpose,
there is absolutely no guarantee that they will work correctly,
and even if they do, that may change when upgrading to a newer version of Quarkus
(even just a micro/patch version).
====

Consider using a supported configuration property before falling back to unsupported ones.
If none exists, make sure to file a feature request so that a supported configuration property can be added to Quarkus,
and more importantly so that the configuration property is tested regularly.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_UNSUPPORTED_PROPERTIES__FULL_PROPERTY_KEY_+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_UNSUPPORTED_PROPERTIES__FULL_PROPERTY_KEY_+++`
endif::add-copy-button-to-env-var[]
--
|Map<String,String>
|

h|[[quarkus-hibernate-orm_section_quarkus-hibernate-orm-database]] [.section-name.section-level0]##link:#quarkus-hibernate-orm_section_quarkus-hibernate-orm-database[Database related configuration]##
h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm_quarkus-hibernate-orm-database-orm-compatibility-version]] [.property-path]##link:#quarkus-hibernate-orm_quarkus-hibernate-orm-database-orm-compatibility-version[`quarkus.hibernate-orm.database.orm-compatibility.version`]##

[.description]
--
When set, attempts to exchange data with the database
as the given version of Hibernate ORM would have,
*on a best-effort basis*.

Please note:

* schema validation may still fail in some cases:
this attempts to make Hibernate ORM 6+ behave correctly at runtime,
but it may still expect a different (but runtime-compatible) schema.
* robust test suites are still useful and recommended:
you should still check that your application behaves as intended with your legacy schema.
* this feature is inherently unstable:
some aspects of it may stop working in future versions of Quarkus,
and older versions will be dropped as Hibernate ORM changes pile up
and support for those older versions becomes too unreliable.
* you should still plan a migration of your schema to a newer version of Hibernate ORM.
For help with migration, refer to
link:https://github.com/quarkusio/quarkus/wiki/Migration-Guide-3.0:-Hibernate-ORM-5-to-6-migration[the Quarkus 3
migration guide from Hibernate ORM 5 to 6].


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_DATABASE_ORM_COMPATIBILITY_VERSION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_DATABASE_ORM_COMPATIBILITY_VERSION+++`
endif::add-copy-button-to-env-var[]
--
a|`5.6`, `latest`
|`latest`

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm_quarkus-hibernate-orm-database-charset]] [.property-path]##link:#quarkus-hibernate-orm_quarkus-hibernate-orm-database-charset[`quarkus.hibernate-orm.database.charset`]##

`quarkus.hibernate-orm."persistence-unit-name".database.charset`

[.description]
--
The charset of the database.

Used for DDL generation and also for the SQL import scripts.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_DATABASE_CHARSET+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_DATABASE_CHARSET+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/nio/charset/Charset.html[Charset]
|`UTF-8`

a| [[quarkus-hibernate-orm_quarkus-hibernate-orm-database-generation]] [.property-path]##link:#quarkus-hibernate-orm_quarkus-hibernate-orm-database-generation[`quarkus.hibernate-orm.database.generation`]##

`quarkus.hibernate-orm."persistence-unit-name".database.generation`

[.description]
--
Select whether the database schema is generated or not. `drop-and-create` is awesome in development mode. This defaults to 'none', however if Dev Services is in use and no other extensions that manage the schema are present this will default to 'drop-and-create'. Accepted values: `none`, `create`, `drop-and-create`, `drop`, `update`, `validate`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_DATABASE_GENERATION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_DATABASE_GENERATION+++`
endif::add-copy-button-to-env-var[]
--
|string
|`none`

a| [[quarkus-hibernate-orm_quarkus-hibernate-orm-database-generation-create-schemas]] [.property-path]##link:#quarkus-hibernate-orm_quarkus-hibernate-orm-database-generation-create-schemas[`quarkus.hibernate-orm.database.generation.create-schemas`]##

`quarkus.hibernate-orm."persistence-unit-name".database.generation.create-schemas`

[.description]
--
If Hibernate ORM should create the schemas automatically (for databases supporting them).


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_DATABASE_GENERATION_CREATE_SCHEMAS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_DATABASE_GENERATION_CREATE_SCHEMAS+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-hibernate-orm_quarkus-hibernate-orm-database-generation-halt-on-error]] [.property-path]##link:#quarkus-hibernate-orm_quarkus-hibernate-orm-database-generation-halt-on-error[`quarkus.hibernate-orm.database.generation.halt-on-error`]##

`quarkus.hibernate-orm."persistence-unit-name".database.generation.halt-on-error`

[.description]
--
Whether we should stop on the first error when applying the schema.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_DATABASE_GENERATION_HALT_ON_ERROR+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_DATABASE_GENERATION_HALT_ON_ERROR+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-hibernate-orm_quarkus-hibernate-orm-database-default-catalog]] [.property-path]##link:#quarkus-hibernate-orm_quarkus-hibernate-orm-database-default-catalog[`quarkus.hibernate-orm.database.default-catalog`]##

`quarkus.hibernate-orm."persistence-unit-name".database.default-catalog`

[.description]
--
The default catalog to use for the database objects.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_DATABASE_DEFAULT_CATALOG+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_DATABASE_DEFAULT_CATALOG+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-hibernate-orm_quarkus-hibernate-orm-database-default-schema]] [.property-path]##link:#quarkus-hibernate-orm_quarkus-hibernate-orm-database-default-schema[`quarkus.hibernate-orm.database.default-schema`]##

`quarkus.hibernate-orm."persistence-unit-name".database.default-schema`

[.description]
--
The default schema to use for the database objects.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_DATABASE_DEFAULT_SCHEMA+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_DATABASE_DEFAULT_SCHEMA+++`
endif::add-copy-button-to-env-var[]
--
|string
|


h|[[quarkus-hibernate-orm_section_quarkus-hibernate-orm-dialect]] [.section-name.section-level0]##link:#quarkus-hibernate-orm_section_quarkus-hibernate-orm-dialect[Dialect related configuration]##
h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm_quarkus-hibernate-orm-dialect]] [.property-path]##link:#quarkus-hibernate-orm_quarkus-hibernate-orm-dialect[`quarkus.hibernate-orm.dialect`]##

`quarkus.hibernate-orm."persistence-unit-name".dialect`

[.description]
--
Name of the Hibernate ORM dialect.

For xref:datasource.adoc#extensions-and-database-drivers-reference[supported databases],
this property does not need to be set explicitly:
it is selected automatically based on the datasource,
and configured using the xref:datasource.adoc#quarkus-datasource_quarkus.datasource.db-version[DB version set on the
datasource]
to benefit from the best performance and latest features.

If your database does not have a corresponding Quarkus extension,
you *will* need to set this property explicitly.
In that case, keep in mind that the JDBC driver and Hibernate ORM dialect
may not work properly in GraalVM native executables.

For built-in dialects, the expected value is one of the names
in the link:{hibernate-orm-dialect-docs-url}[official list of dialects],
*without* the `Dialect` suffix,
for example `Cockroach` for `CockroachDialect`.

For third-party dialects, the expected value is the fully-qualified class name,
for example `com.acme.hibernate.AcmeDbDialect`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_DIALECT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_DIALECT+++`
endif::add-copy-button-to-env-var[]
--
|string
|`selected automatically for most popular databases`

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm_quarkus-hibernate-orm-dialect-storage-engine]] [.property-path]##link:#quarkus-hibernate-orm_quarkus-hibernate-orm-dialect-storage-engine[`quarkus.hibernate-orm.dialect.storage-engine`]##

`quarkus.hibernate-orm."persistence-unit-name".dialect.storage-engine`

[.description]
--
The storage engine to use when the dialect supports multiple storage engines.

E.g. `MyISAM` or `InnoDB` for MySQL.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_DIALECT_STORAGE_ENGINE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_DIALECT_STORAGE_ENGINE+++`
endif::add-copy-button-to-env-var[]
--
|string
|


h|[[quarkus-hibernate-orm_section_quarkus-hibernate-orm-mapping]] [.section-name.section-level0]##link:#quarkus-hibernate-orm_section_quarkus-hibernate-orm-mapping[Mapping configuration]##
h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm_quarkus-hibernate-orm-mapping-timezone-default-storage]] [.property-path]##link:#quarkus-hibernate-orm_quarkus-hibernate-orm-mapping-timezone-default-storage[`quarkus.hibernate-orm.mapping.timezone.default-storage`]##

`quarkus.hibernate-orm."persistence-unit-name".mapping.timezone.default-storage`

[.description]
--
How to store timezones in the database by default
for properties of type `OffsetDateTime` and `ZonedDateTime`.

This default may be overridden on a per-property basis using `@TimeZoneStorage`.

NOTE: Properties of type `OffsetTime` are https://hibernate.atlassian.net/browse/HHH-16287[not affected by this
setting].

`default`::
Equivalent to `native` if supported, `normalize-utc` otherwise.
`auto`::
Equivalent to `native` if supported, `column` otherwise.
`native`::
Stores the timestamp and timezone in a column of type `timestamp with time zone`.
+
Only available on some databases/dialects;
if not supported, an exception will be thrown during static initialization.
`column`::
Stores the timezone in a separate column next to the timestamp column.
+
Use `@TimeZoneColumn` on the relevant entity property to customize the timezone column.
`normalize-utc`::
Does not store the timezone, and loses timezone information upon persisting.
+
Instead, normalizes the value to a timestamp in the UTC timezone.
`normalize`::
Does not store the timezone, and loses timezone information upon persisting.
+
Instead, normalizes the value:
* upon persisting to the database, to a timestamp in the JDBC timezone
set through `quarkus.hibernate-orm.jdbc.timezone`,
or the JVM default timezone if not set.
* upon reading back from the database, to the JVM default timezone.
+
Use this to get the legacy behavior of Quarkus 2 / Hibernate ORM 5 or older.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_MAPPING_TIMEZONE_DEFAULT_STORAGE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_MAPPING_TIMEZONE_DEFAULT_STORAGE+++`
endif::add-copy-button-to-env-var[]
--
a|`native`, `normalize`, `normalize-utc`, `column`, `auto`, `default`
|`default`

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm_quarkus-hibernate-orm-mapping-id-optimizer-default]] [.property-path]##link:#quarkus-hibernate-orm_quarkus-hibernate-orm-mapping-id-optimizer-default[`quarkus.hibernate-orm.mapping.id.optimizer.default`]##

`quarkus.hibernate-orm."persistence-unit-name".mapping.id.optimizer.default`

[.description]
--
The optimizer to apply to identifier generators
whose optimizer is not configured explicitly.

Only relevant for table- and sequence-based identifier generators.
Other generators, such as UUID-based generators, will ignore this setting.

The optimizer is responsible for pooling new identifier values,
in order to reduce the frequency of database calls to retrieve those values
and thereby improve performance.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_MAPPING_ID_OPTIMIZER_DEFAULT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_MAPPING_ID_OPTIMIZER_DEFAULT+++`
endif::add-copy-button-to-env-var[]
--
a|tooltip:pooled-lo[Assumes the value retrieved from the table/sequence is the lower end of the pool.  Upon retrieving value `N`, the new pool of identifiers will go from `N` to `N + <allocation size> - 1`, inclusive.], tooltip:pooled[Assumes the value retrieved from the table/sequence is the higher end of the pool.  Upon retrieving value `N`, the new pool of identifiers will go from `N - <allocation size>` to `N + <allocation size> - 1`, inclusive.  The first value, `1`, is handled differently to avoid negative identifiers.  Use this to get the legacy behavior of Quarkus 2 / Hibernate ORM 5 or older.], tooltip:none[No optimizer, resulting in a database call each and every time an identifier value is needed from the generator.  Not recommended in production environments\: may result in degraded performance and/or frequent gaps in identifier values.]
|tooltip:pooled-lo[Assumes the value retrieved from the table/sequence is the lower end of the pool.  Upon retrieving value `N`, the new pool of identifiers will go from `N` to `N + <allocation size> - 1`, inclusive.]


h|[[quarkus-hibernate-orm_section_quarkus-hibernate-orm-query]] [.section-name.section-level0]##link:#quarkus-hibernate-orm_section_quarkus-hibernate-orm-query[Query related configuration]##
h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm_quarkus-hibernate-orm-query-query-plan-cache-max-size]] [.property-path]##link:#quarkus-hibernate-orm_quarkus-hibernate-orm-query-query-plan-cache-max-size[`quarkus.hibernate-orm.query.query-plan-cache-max-size`]##

`quarkus.hibernate-orm."persistence-unit-name".query.query-plan-cache-max-size`

[.description]
--
The maximum size of the query plan cache. see ++#++`org.hibernate.cfg.AvailableSettings++#++QUERY_PLAN_CACHE_MAX_SIZE`


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_QUERY_QUERY_PLAN_CACHE_MAX_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_QUERY_QUERY_PLAN_CACHE_MAX_SIZE+++`
endif::add-copy-button-to-env-var[]
--
|int
|`2048`

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm_quarkus-hibernate-orm-query-default-null-ordering]] [.property-path]##link:#quarkus-hibernate-orm_quarkus-hibernate-orm-query-default-null-ordering[`quarkus.hibernate-orm.query.default-null-ordering`]##

`quarkus.hibernate-orm."persistence-unit-name".query.default-null-ordering`

[.description]
--
Default precedence of null values in `ORDER BY` clauses.

Valid values are: `none`, `first`, `last`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_QUERY_DEFAULT_NULL_ORDERING+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_QUERY_DEFAULT_NULL_ORDERING+++`
endif::add-copy-button-to-env-var[]
--
a|`none`, `first`, `last`
|`none`

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm_quarkus-hibernate-orm-query-in-clause-parameter-padding]] [.property-path]##link:#quarkus-hibernate-orm_quarkus-hibernate-orm-query-in-clause-parameter-padding[`quarkus.hibernate-orm.query.in-clause-parameter-padding`]##

`quarkus.hibernate-orm."persistence-unit-name".query.in-clause-parameter-padding`

[.description]
--
Enables IN clause parameter padding which improves statement caching.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_QUERY_IN_CLAUSE_PARAMETER_PADDING+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_QUERY_IN_CLAUSE_PARAMETER_PADDING+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`true`


h|[[quarkus-hibernate-orm_section_quarkus-hibernate-orm-jdbc]] [.section-name.section-level0]##link:#quarkus-hibernate-orm_section_quarkus-hibernate-orm-jdbc[JDBC related configuration]##
h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm_quarkus-hibernate-orm-jdbc-timezone]] [.property-path]##link:#quarkus-hibernate-orm_quarkus-hibernate-orm-jdbc-timezone[`quarkus.hibernate-orm.jdbc.timezone`]##

`quarkus.hibernate-orm."persistence-unit-name".jdbc.timezone`

[.description]
--
The time zone pushed to the JDBC driver. See `quarkus.hibernate-orm.mapping.timezone.default-storage`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_JDBC_TIMEZONE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_JDBC_TIMEZONE+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm_quarkus-hibernate-orm-jdbc-statement-fetch-size]] [.property-path]##link:#quarkus-hibernate-orm_quarkus-hibernate-orm-jdbc-statement-fetch-size[`quarkus.hibernate-orm.jdbc.statement-fetch-size`]##

`quarkus.hibernate-orm."persistence-unit-name".jdbc.statement-fetch-size`

[.description]
--
How many rows are fetched at a time by the JDBC driver.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_JDBC_STATEMENT_FETCH_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_JDBC_STATEMENT_FETCH_SIZE+++`
endif::add-copy-button-to-env-var[]
--
|int
|

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm_quarkus-hibernate-orm-jdbc-statement-batch-size]] [.property-path]##link:#quarkus-hibernate-orm_quarkus-hibernate-orm-jdbc-statement-batch-size[`quarkus.hibernate-orm.jdbc.statement-batch-size`]##

`quarkus.hibernate-orm."persistence-unit-name".jdbc.statement-batch-size`

[.description]
--
The number of updates (inserts, updates and deletes) that are sent by the JDBC driver at one time for execution.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_JDBC_STATEMENT_BATCH_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_JDBC_STATEMENT_BATCH_SIZE+++`
endif::add-copy-button-to-env-var[]
--
|int
|


h|[[quarkus-hibernate-orm_section_quarkus-hibernate-orm-fetch]] [.section-name.section-level0]##link:#quarkus-hibernate-orm_section_quarkus-hibernate-orm-fetch[Fetching logic configuration]##
h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm_quarkus-hibernate-orm-fetch-batch-size]] [.property-path]##link:#quarkus-hibernate-orm_quarkus-hibernate-orm-fetch-batch-size[`quarkus.hibernate-orm.fetch.batch-size`]##

`quarkus.hibernate-orm."persistence-unit-name".fetch.batch-size`

[.description]
--
The size of the batches used when loading entities and collections.

`-1` means batch loading is disabled.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_FETCH_BATCH_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_FETCH_BATCH_SIZE+++`
endif::add-copy-button-to-env-var[]
--
|int
|`16`

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm_quarkus-hibernate-orm-fetch-max-depth]] [.property-path]##link:#quarkus-hibernate-orm_quarkus-hibernate-orm-fetch-max-depth[`quarkus.hibernate-orm.fetch.max-depth`]##

`quarkus.hibernate-orm."persistence-unit-name".fetch.max-depth`

[.description]
--
The maximum depth of outer join fetch tree for single-ended associations (one-to-one, many-to-one).

A `0` disables default outer join fetching.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_FETCH_MAX_DEPTH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_FETCH_MAX_DEPTH+++`
endif::add-copy-button-to-env-var[]
--
|int
|


h|[[quarkus-hibernate-orm_section_quarkus-hibernate-orm-cache]] [.section-name.section-level0]##link:#quarkus-hibernate-orm_section_quarkus-hibernate-orm-cache[Caching configuration]##
h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm_quarkus-hibernate-orm-cache-cache-expiration-max-idle]] [.property-path]##link:#quarkus-hibernate-orm_quarkus-hibernate-orm-cache-cache-expiration-max-idle[`quarkus.hibernate-orm.cache."cache".expiration.max-idle`]##

`quarkus.hibernate-orm."persistence-unit-name".cache."cache".expiration.max-idle`

[.description]
--
The maximum time before an object of the cache is considered expired.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_CACHE__CACHE__EXPIRATION_MAX_IDLE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_CACHE__CACHE__EXPIRATION_MAX_IDLE+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-{summaryTableId}[icon:question-circle[title=More information about the Duration format]]
|

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm_quarkus-hibernate-orm-cache-cache-memory-object-count]] [.property-path]##link:#quarkus-hibernate-orm_quarkus-hibernate-orm-cache-cache-memory-object-count[`quarkus.hibernate-orm.cache."cache".memory.object-count`]##

`quarkus.hibernate-orm."persistence-unit-name".cache."cache".memory.object-count`

[.description]
--
The maximum number of objects kept in memory in the cache.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_CACHE__CACHE__MEMORY_OBJECT_COUNT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_CACHE__CACHE__MEMORY_OBJECT_COUNT+++`
endif::add-copy-button-to-env-var[]
--
|long
|


h|[[quarkus-hibernate-orm_section_quarkus-hibernate-orm-discriminator]] [.section-name.section-level0]##link:#quarkus-hibernate-orm_section_quarkus-hibernate-orm-discriminator[Discriminator related configuration]##
h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm_quarkus-hibernate-orm-discriminator-ignore-explicit-for-joined]] [.property-path]##link:#quarkus-hibernate-orm_quarkus-hibernate-orm-discriminator-ignore-explicit-for-joined[`quarkus.hibernate-orm.discriminator.ignore-explicit-for-joined`]##

`quarkus.hibernate-orm."persistence-unit-name".discriminator.ignore-explicit-for-joined`

[.description]
--
Existing applications rely (implicitly or explicitly) on Hibernate ignoring any DiscriminatorColumn declarations on joined inheritance hierarchies. This setting allows these applications to maintain the legacy behavior of DiscriminatorColumn annotations being ignored when paired with joined inheritance.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_DISCRIMINATOR_IGNORE_EXPLICIT_FOR_JOINED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_DISCRIMINATOR_IGNORE_EXPLICIT_FOR_JOINED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`


h|[[quarkus-hibernate-orm_section_quarkus-hibernate-orm-log]] [.section-name.section-level0]##link:#quarkus-hibernate-orm_section_quarkus-hibernate-orm-log[Logging configuration]##
h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm_quarkus-hibernate-orm-log-bind-parameters]] [.property-path]##link:#quarkus-hibernate-orm_quarkus-hibernate-orm-log-bind-parameters[`quarkus.hibernate-orm.log.bind-parameters`]##

[.description]
--
Logs SQL bind parameters.

Setting it to true is obviously not recommended in production.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_LOG_BIND_PARAMETERS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_LOG_BIND_PARAMETERS+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-hibernate-orm_quarkus-hibernate-orm-log-sql]] [.property-path]##link:#quarkus-hibernate-orm_quarkus-hibernate-orm-log-sql[`quarkus.hibernate-orm.log.sql`]##

`quarkus.hibernate-orm."persistence-unit-name".log.sql`

[.description]
--
Show SQL logs and format them nicely.

Setting it to true is obviously not recommended in production.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_LOG_SQL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_LOG_SQL+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-hibernate-orm_quarkus-hibernate-orm-log-format-sql]] [.property-path]##link:#quarkus-hibernate-orm_quarkus-hibernate-orm-log-format-sql[`quarkus.hibernate-orm.log.format-sql`]##

`quarkus.hibernate-orm."persistence-unit-name".log.format-sql`

[.description]
--
Format the SQL logs if SQL log is enabled


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_LOG_FORMAT_SQL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_LOG_FORMAT_SQL+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`true`

a| [[quarkus-hibernate-orm_quarkus-hibernate-orm-log-highlight-sql]] [.property-path]##link:#quarkus-hibernate-orm_quarkus-hibernate-orm-log-highlight-sql[`quarkus.hibernate-orm.log.highlight-sql`]##

`quarkus.hibernate-orm."persistence-unit-name".log.highlight-sql`

[.description]
--
Highlight the SQL logs if SQL log is enabled


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_LOG_HIGHLIGHT_SQL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_LOG_HIGHLIGHT_SQL+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`true`

a| [[quarkus-hibernate-orm_quarkus-hibernate-orm-log-jdbc-warnings]] [.property-path]##link:#quarkus-hibernate-orm_quarkus-hibernate-orm-log-jdbc-warnings[`quarkus.hibernate-orm.log.jdbc-warnings`]##

`quarkus.hibernate-orm."persistence-unit-name".log.jdbc-warnings`

[.description]
--
Whether JDBC warnings should be collected and logged.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_LOG_JDBC_WARNINGS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_LOG_JDBC_WARNINGS+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`depends on dialect`

a| [[quarkus-hibernate-orm_quarkus-hibernate-orm-log-queries-slower-than-ms]] [.property-path]##link:#quarkus-hibernate-orm_quarkus-hibernate-orm-log-queries-slower-than-ms[`quarkus.hibernate-orm.log.queries-slower-than-ms`]##

`quarkus.hibernate-orm."persistence-unit-name".log.queries-slower-than-ms`

[.description]
--
If set, Hibernate will log queries that took more than specified number of milliseconds to execute.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_LOG_QUERIES_SLOWER_THAN_MS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_LOG_QUERIES_SLOWER_THAN_MS+++`
endif::add-copy-button-to-env-var[]
--
|long
|


h|[[quarkus-hibernate-orm_section_quarkus-hibernate-orm-scripts]] [.section-name.section-level0]##link:#quarkus-hibernate-orm_section_quarkus-hibernate-orm-scripts[Database scripts related configuration]##
h|Type
h|Default

a| [[quarkus-hibernate-orm_quarkus-hibernate-orm-scripts-generation]] [.property-path]##link:#quarkus-hibernate-orm_quarkus-hibernate-orm-scripts-generation[`quarkus.hibernate-orm.scripts.generation`]##

`quarkus.hibernate-orm."persistence-unit-name".scripts.generation`

[.description]
--
Select whether the database schema DDL files are generated or not. Accepted values: `none`, `create`, `drop-and-create`, `drop`, `update`, `validate`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_SCRIPTS_GENERATION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_SCRIPTS_GENERATION+++`
endif::add-copy-button-to-env-var[]
--
|string
|`none`

a| [[quarkus-hibernate-orm_quarkus-hibernate-orm-scripts-generation-create-target]] [.property-path]##link:#quarkus-hibernate-orm_quarkus-hibernate-orm-scripts-generation-create-target[`quarkus.hibernate-orm.scripts.generation.create-target`]##

`quarkus.hibernate-orm."persistence-unit-name".scripts.generation.create-target`

[.description]
--
Filename or URL where the database create DDL file should be generated.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_SCRIPTS_GENERATION_CREATE_TARGET+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_SCRIPTS_GENERATION_CREATE_TARGET+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-hibernate-orm_quarkus-hibernate-orm-scripts-generation-drop-target]] [.property-path]##link:#quarkus-hibernate-orm_quarkus-hibernate-orm-scripts-generation-drop-target[`quarkus.hibernate-orm.scripts.generation.drop-target`]##

`quarkus.hibernate-orm."persistence-unit-name".scripts.generation.drop-target`

[.description]
--
Filename or URL where the database drop DDL file should be generated.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_SCRIPTS_GENERATION_DROP_TARGET+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_SCRIPTS_GENERATION_DROP_TARGET+++`
endif::add-copy-button-to-env-var[]
--
|string
|


h|[[quarkus-hibernate-orm_section_quarkus-hibernate-orm-flush]] [.section-name.section-level0]##link:#quarkus-hibernate-orm_section_quarkus-hibernate-orm-flush[Flush configuration]##
h|Type
h|Default

a| [[quarkus-hibernate-orm_quarkus-hibernate-orm-flush-mode]] [.property-path]##link:#quarkus-hibernate-orm_quarkus-hibernate-orm-flush-mode[`quarkus.hibernate-orm.flush.mode`]##

`quarkus.hibernate-orm."persistence-unit-name".flush.mode`

[.description]
--
The default flushing strategy, or when to flush entities to the database in a Hibernate session:
before every query, on commit, ...

This default can be overridden on a per-session basis with `Session#setHibernateFlushMode()`
or on a per-query basis with the hint `HibernateHints#HINT_FLUSH_MODE`.

See the javadoc of `org.hibernate.FlushMode` for details.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_FLUSH_MODE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_FLUSH_MODE+++`
endif::add-copy-button-to-env-var[]
--
a|`manual`, `commit`, `auto`, `always`
|`auto`


|===

ifndef::no-duration-note[]
[NOTE]
[id=duration-note-anchor-quarkus-hibernate-orm_quarkus-hibernate-orm]
.About the Duration format
====
To write duration values, use the standard `java.time.Duration` format.
See the link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html#parse(java.lang.CharSequence)[Duration#parse() Java API documentation] for more information.

You can also use a simplified format, starting with a number:

* If the value is only a number, it represents time in seconds.
* If the value is a number followed by `ms`, it represents time in milliseconds.

In other cases, the simplified format is translated to the `java.time.Duration` format for parsing:

* If the value is a number followed by `h`, `m`, or `s`, it is prefixed with `PT`.
* If the value is a number followed by `d`, it is prefixed with `P`.
====
endif::no-duration-note[]

:!summaryTableId: